syntax = "proto3";
package toggle.test.public.user;
option go_package = "github.com/toggleglobal/aaronb-technical-test/gen";

import "google/protobuf/empty.proto";

service PublicUserService {
    rpc Login(LoginReq) returns (LoginResp);
    rpc CreateUser(CreateUserReq) returns (CreateUserResp);
    rpc AddUserTag(AddUserTagReq) returns (google.protobuf.Empty);
    rpc RemoveUserTag(RemoveUserTagReq) returns (google.protobuf.Empty);
}

message LoginReq {
    string username = 1;
    string password = 2;
}

message LoginResp {
    string token = 1;
}

message CreateUserReq {
    string username = 1;
    string password = 2;
}

message CreateUserResp {
    string user_id = 1;
}

message AddUserTagReq {
    string tag = 1;
}

message RemoveUserTagReq {
    string tag = 1;
}
